# drf_home_work

./: .env.sample  .gitignore  README.md  env_sample.txt  pyproject.toml
config/: settings.py  urls.py
education/: admin.py  models.py  serializers.py  urls.py  views.py
education/migrations/: 0001_initial.py  0002_payment.py  0003_course_owner_lesson_owner_alter_lesson_course.py
education/views/: drf.py
src/: constants.py
users/: models.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py
users/models/: __init__.py  models.py
